--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -26,6 +26,7 @@
                                 <input id="name" type="text" placeholder="Name"
                                     class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
                     </div>
+                    <span class="text-xs text-red-400" hidden id="name_error"></span>
                     <div class="mt-4">
                         <label class="block" for="email">Email<label>
                                 <input id="email" type="email" placeholder="Email"
