--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -45,7 +45,7 @@
                     <!-- <span class="text-xs text-red-400">Password must be same!</span> -->
                     <div class="flex">
                         <button type="button" class="w-full px-6 py-2 mt-4 text-white bg-blue-600 rounded-lg hover:bg-blue-900" 
-                        onclick="login()">Create
+                        onclick="register()">Create
                             Account</button>
                     </div>
                     <div class="mt-6 text-grey-dark">
