--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <%- include('../partials/head.ejs') %>
+    </head>
 
-<head>
-    <%- include('../partials/head.ejs') %>
-</head>
-
-<body>
-    <div class="flex items-center justify-center min-h-screen bg-gray-100">
+    <body>
+        <!-- <div class="flex items-center justify-center min-h-screen bg-gray-100">
         <div class="px-8 py-6 mx-4 mt-4 text-left bg-white shadow-lg md:w-1/3 lg:w-1/3 sm:w-1/3">
             <div class="flex justify-center">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-20 h-20 text-blue-600" fill="none" viewBox="0 0 24 24"
@@ -19,21 +18,21 @@
                 </svg>
             </div>
             <h3 class="text-2xl font-bold text-center">Login</h3>
-            <form action="">
+            <form>
                 <div class="mt-4">
                     <div class="mt-4">
                         <label class="block" for="email">Email<label>
-                                <input type="email" placeholder="Email"
+                                <input type="email" id="email" placeholder="Email"
                                     class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
                     </div>
                     <div class="mt-4">
                         <label class="block">Password<label>
-                                <input type="password" placeholder="Password"
+                                <input type="password" id="password" placeholder="Password"
                                     class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600">
                     </div>
                     
                     <div class="flex">
-                        <button class="w-full px-6 py-2 mt-4 text-white bg-blue-600 rounded-lg hover:bg-blue-900">
+                        <button type="button" onclick="login()" class="w-full px-6 py-2 mt-4 text-white bg-blue-600 rounded-lg hover:bg-blue-900">
                             Login</button>
                     </div>
                     <div class="mt-6 text-grey-dark">
@@ -45,6 +44,42 @@
                 </div>
             </form>
         </div>
-    </div>
-</body>
+    </div> -->
+        <form>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input
+                    type="email"
+                    class="form-control"
+                    id="exampleInputEmail1"
+                    aria-describedby="emailHelp"
+                    placeholder="Enter email"
+                />
+                <small id="emailHelp" class="form-text text-muted"
+                    >We'll never share your email with anyone else.</small
+                >
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input
+                    type="password"
+                    class="form-control"
+                    id="exampleInputPassword1"
+                    placeholder="Password"
+                />
+            </div>
+            <div class="form-group form-check">
+                <input
+                    type="checkbox"
+                    class="form-check-input"
+                    id="exampleCheck1"
+                />
+                <label class="form-check-label" for="exampleCheck1"
+                    >Check me out</label
+                >
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <script src="../public/js/auth.js"></script>
+    </body>
 </html>
